# adv_mla_lab_1

./: Makefile  README.md  prepare_data_and_baseline.ipynb  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Untitled.ipynb  prepare_data_and_baseline.ipynb  rf.ipynb
solution/: __init__.py  dataset.py  features.py  plots.py
solution/modeling/: predict.py  train.py
