[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "solution"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Ricki Yang" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab (==4.4.4)",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas (==2.2.2)",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn (==1.5.1)",
    "tqdm",
    "typer",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["solution"]
include = ["pyproject.toml", "solution/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["solution"]
force-sort-within-sections = true

